fix toggles + bootstrap update to 3.4.1

--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -92,8 +92,7 @@
 @import "theme/components/ui/heading-elements.less";      // 31% usage
 @import "theme/components/ui/toolbar.less";               // 50% usage
 
-// Import form components (needed for switchery and other form elements)
-@import "theme/components/plugins/forms/checkboxes/switchery.less";  // 43% usage
+// Import form components
 @import "theme/components/plugins/forms/checkboxes/uniform.less";     // 33% usage
 
 // Import high-usage page components (excluding login.less due to image path issues)
