--- a/templates/Includes/filter_sidebar.html.twig
+++ b/templates/Includes/filter_sidebar.html.twig
@@ -14,30 +14,30 @@
                 <input id="form-longitude" name="filters[longitude]" type="hidden">
 
                 <div class="category-content">
-                    <div class="form-group">
-                        <div class="checkbox checkbox-right checkbox-switchery switchery-xs" data-controller="toggle-switch">
+                    <div class="form-group toggle-switch-form-group">
+                        <div class="checkbox">
                             <label class="display-block">
                                 {{ 'map_index.filter.status'|trans }}
                                 <input name="filters[status]" type="checkbox"
-                                       class="switchery" {% if filters.status is defined and filters.status == "on" %} checked{% endif %}>
+                                       {% if filters.status is defined and filters.status == "on" %} checked{% endif %}>
                             </label>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <div class="checkbox checkbox-right checkbox-switchery switchery-xs" data-controller="toggle-switch">
+                    <div class="form-group toggle-switch-form-group">
+                        <div class="checkbox">
                             <label class="display-block">
                                 {{ 'map_index.filter.kiddie'|trans }}
-                                <input name="filters[kiddie]" type="checkbox" class="switchery"
+                                <input name="filters[kiddie]" type="checkbox"
                                        {% if filters.kiddie is defined and filters.kiddie == "on" %} checked{% endif %}>
                             </label>
                         </div>
                     </div>
                     {% if filters.ridden is not defined %}
-                        <div class="form-group">
-                            <div class="checkbox checkbox-right checkbox-switchery switchery-xs">
+                        <div class="form-group toggle-switch-form-group">
+                            <div class="checkbox">
                                 <label class="display-block">
                                     {{ 'map_index.filter.notridden'|trans }}
-                                    <input name="filters[notridden]" type="checkbox" class="switchery"
+                                    <input name="filters[notridden]" type="checkbox"
                                         {% if not is_granted('ROLE_USER') %} disabled="disabled"{% endif %}
                                         {% if filters.notridden is defined and filters.notridden == "on" %} checked{% endif %}>
                                 </label>
