--- a/templates/Coaster/image-ajax.html.twig
+++ b/templates/Coaster/image-ajax.html.twig
@@ -1,5 +1,4 @@
 {% if coaster.images|length > 0 %}
-  <div id="coaster-photos" class="row">
     <div class="panel panel-flat border-top-blue">
       <div class="panel-heading">
         <h6>{{ 'coaster.photos.title'|trans }}</h6>
@@ -12,7 +11,10 @@
           {% endif %}
         </div>
       </div>
-      <div class="panel-body no-border no-padding-top" data-gallery="coaster-images">
+      <div class="panel-body no-border no-padding-top" 
+           data-controller="gallery" 
+           data-gallery-name-value="coaster-images"
+           data-gallery="coaster-images">
         {% for image in coaster.images|slice(0, number) %}
           <div class="col-sm-3">
             <a class="m-10" href="{{ pictures_cdn }}/1440x1440/{{ image.filename }}"
@@ -34,9 +36,7 @@
         {% endfor %}
       </div>
     </div>
-  </div>
 {% else %}
-  <div class="row">
     <div class="panel panel-flat border-top-blue">
       <div class="panel-heading">
         <h6>{{ 'coaster.photos.title'|trans }}</h6>
@@ -48,7 +48,6 @@
         </a>
       </div>
     </div>
-  </div>
 {% endif %}
 <script>
   function toggleLike(element, id) {
