--- a/templates/User/images.html.twig
+++ b/templates/User/images.html.twig
@@ -9,7 +9,10 @@
   {% if images|length > 0 %}
     <div id="coaster-photos" class="row">
       <div class="panel panel-flat border-top-blue">
-        <div class="panel-body no-border no-padding-top" data-gallery="user-images">
+        <div class="panel-body no-border no-padding-top" 
+             data-controller="gallery" 
+             data-gallery-name-value="user-images"
+             data-gallery="user-images">
           {% for image in images %}
             <div class="col-sm-3">
               <a class="m-10" href="{{ pictures_cdn }}/1440x1440/{{ image.filename }}"
@@ -51,49 +54,6 @@
 {% endblock %}
 
 {% block javascripts %}
-  <script type="text/javascript">
-        // Initialize PhotoSwipe for user images
-        if (window.PhotoSwipeLightbox) {
-            const lightbox = new window.PhotoSwipeLightbox({
-                gallery: '[data-gallery="user-images"]',
-                children: 'a',
-                pswpModule: window.PhotoSwipe,
-                showHideAnimationType: 'fade',
-                bgOpacity: 0.9,
-                spacing: 0.1,
-                allowPanToNext: true,
-                zoom: true,
-                close: true,
-                arrowKeys: true,
-                returnFocus: true,
-                trapFocus: true,
-                clickToCloseNonZoomable: true
-            });
-
-            // Add event listener to dynamically load image dimensions
-            lightbox.on('uiRegister', () => {
-                lightbox.on('contentLoad', (e) => {
-                    const { content } = e;
-                    
-                    if (content.type === 'image') {
-                        // Create a new image to get actual dimensions
-                        const img = new Image();
-                        img.onload = () => {
-                            // Update content with actual dimensions
-                            content.width = img.naturalWidth;
-                            content.height = img.naturalHeight;
-                            
-                            // Trigger PhotoSwipe to update layout
-                            if (lightbox.pswp) {
-                                lightbox.pswp.updateSize();
-                            }
-                        };
-                        img.src = content.data.src;
-                    }
-                });
-            });
-            
-            lightbox.init();
-        }
+  {# PhotoSwipe is now handled by the gallery Stimulus controller #}
   </script>
 {% endblock %}
