--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -113,10 +113,13 @@
 @import "components/map.css";
 @import "components/search.css";
 @import "components/top-list.css";
-@import "components/feedback.css";
+@import "components/summary-feedback.css";
 
 // Import utilities
 @import "utilities/image-optimization.css";
+
+// Import rating distribution component
+@import "components/rating-distribution.css";
 
 
 
